--- a/sisgee-master/sisgee/src/main/resources/Messages_pt_BR.properties
+++ b/sisgee-master/sisgee/src/main/resources/Messages_pt_BR.properties
@@ -29,6 +29,8 @@ br.cefetrj.sisgee.form_termo_estagio_servlet.aluno_invalido=Aluno escolhido n\u0
 br.cefetrj.sisgee.form_termo_estagio_servlet.lista_alunos_vazia=Nenhum aluno cadastrado no banco
 br.cefetrj.sisgee.form_termo_estagio_servlet.empresa_invalida=Empresa escolhida n\u00e3o est\u00e1 cadastrada
 br.cefetrj.sisgee.form_termo_estagio_servlet.msg_aluno_has_termo_aberto=Aluno possui um Termo de Est\u00e1gio em aberto
+br.cefetrj.sisgee.resources.form.placeholder_numeroConvenio = Digite o n\u00famero do Conv\u00eanio
+br.cefetrj.sisgee.resources.form.placeholder_nomeConvenio = Digite o nome do Conv\u00eanio
 
 br.cefetrj.sisgee.import_busca_aluno_script.matricula_vazia=Voc\u00ea precisa digitar a matr\u00edcula!
 br.cefetrj.sisgee.import_busca_aluno_script.campo_vazio=Campo vazio
@@ -183,3 +185,19 @@ br.cefetrj.sisgee.relatorio.relatorio_consolidado.tabela_resultado.qnt_termoesta
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.tabela_resultado.qnt_termoaditivo=Aditivos Registrados
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.tabela_resultado.qnt_rescisao=Rescis\u00f5es Registradas
 br.cefetrj.sisgee.relatorio.busca_relatorio_consolidado_servlet.nenhum_resultado=Nenhum resultado encontrado
+
+
+       br.cefetrj.sisgee.resources.form.nomeConvenio = Nome Convenio
+       br.cefetrj.sisgee.resources.form.nomeSupervisor = Nome do Supervisor
+       br.cefetrj.sisgee.resources.form.cargoSupervisor = Cargo do Supervisor
+       br.cefetrj.sisgee.resources.form.nomeAgenciada = Agenciada 
+       br.cefetrj.sisgee.resources.form.pj = Pessoa Jur\u00eddica
+       br.cefetrj.sisgee.resources.form.pf = Pessoa F\u00edsica
+       br.cefetrj.sisgee.resources.form.tipoPJ_PF = Tipo
+       br.cefetrj.sisgee.import_busca_convenio_script.convenio_vazio = Voc\u00ea precisa digitar o Convenio!
+       br.cefetrj.sisgee.import_busca_convenio_script.campo_vazio = Campo vazio
+       br.cefetrj.sisgee.resources.form.exibirCPFeCNPJ = CNPJ / CPF
+       br.cefetrj.sisgee.resources.form.razaoSocial = Raz\u00e3o Social / Nome Pessoa
+       br.cefetrj.sisgee.resources.form.vigenciaAditivo = Vig\u00eancia do Aditivo
+       br.cefetrj.sisgee.resources.form.valorAditivo = Valor da Bolsa no Aditivo
+       br.cefetrj.sisgee.resources.form.placeholder_numeroTelefone = (99)99999-9999
