--- a/sisgee-master/sisgee/src/main/resources/Messages_en_US.properties
+++ b/sisgee-master/sisgee/src/main/resources/Messages_en_US.properties
@@ -28,6 +28,8 @@ br.cefetrj.sisgee.form_termo_estagio_servlet.aluno_invalido=Student is invalid
 br.cefetrj.sisgee.form_termo_estagio_servlet.lista_alunos_vazia=There's no student in the Data Base
 br.cefetrj.sisgee.form_termo_estagio_servlet.empresa_invalida=Company is invalid
 br.cefetrj.sisgee.form_termo_estagio_servlet.msg_aluno_has_termo_aberto=Student has an open Internship Term
+br.cefetrj.sisgee.resources.form.placeholder_numeroConvenio = Enter the number of the agreement
+br.cefetrj.sisgee.resources.form.placeholder_nomeConvenio = Enter the name of the agreement
 
 br.cefetrj.sisgee.import_busca_aluno_script.matricula_vazia=You must type the student's register number!
 br.cefetrj.sisgee.import_busca_aluno_script.campo_vazio=Empty field
