--- a/sisgee-master/sisgee/src/main/resources/Messages_en_US.properties
+++ b/sisgee-master/sisgee/src/main/resources/Messages_en_US.properties
@@ -28,8 +28,6 @@ br.cefetrj.sisgee.form_termo_estagio_servlet.aluno_invalido=Student is invalid
 br.cefetrj.sisgee.form_termo_estagio_servlet.lista_alunos_vazia=There's no student in the Data Base
 br.cefetrj.sisgee.form_termo_estagio_servlet.empresa_invalida=Company is invalid
 br.cefetrj.sisgee.form_termo_estagio_servlet.msg_aluno_has_termo_aberto=Student has an open Internship Term
-br.cefetrj.sisgee.resources.form.placeholder_numeroConvenio = Enter the number of the agreement
-br.cefetrj.sisgee.resources.form.placeholder_nomeConvenio = Enter the name of the agreement
 
 br.cefetrj.sisgee.import_busca_aluno_script.matricula_vazia=You must type the student's register number!
 br.cefetrj.sisgee.import_busca_aluno_script.campo_vazio=Empty field
@@ -178,3 +176,17 @@ br.cefetrj.sisgee.relatorio.relatorio_consolidado.tabela_resultado.qnt_termoesta
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.tabela_resultado.qnt_termoaditivo=Additions Registered
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.tabela_resultado.qnt_rescisao=Rescissions Registered
 br.cefetrj.sisgee.relatorio.busca_relatorio_consolidado_servlet.nenhum_resultado=No results found
+
+       br.cefetrj.sisgee.resources.form.nomeConvenio = Name Agreement
+       br.cefetrj.sisgee.resources.form.nomeSupervisor = Name of Supervisor
+       br.cefetrj.sisgee.resources.form.cargoSupervisor = Supervisor Role
+       br.cefetrj.sisgee.resources.form.nomeAgenciada = Managed By: 
+       br.cefetrj.sisgee.resources.form.pj = Legal Person
+       br.cefetrj.sisgee.resources.form.pf = Physical Person
+       br.cefetrj.sisgee.resources.form.tipoPJ_PF = Type:
+       br.cefetrj.sisgee.import_busca_convenio_script.convenio_vazio = You Need to Enter the Agreement!
+       br.cefetrj.sisgee.import_busca_convenio_script.campo_vazio = Empty Field
+       br.cefetrj.sisgee.resources.form.exibirCPFeCNPJ = NRLE / RI
+       br.cefetrj.sisgee.resources.form.razaoSocial = Company Name / Person Name
+       br.cefetrj.sisgee.resources.form.placeholder_numeroConvenio = Enter the Number of the Agreement
+       br.cefetrj.sisgee.resources.form.placeholder_nomeConvenio = Enter the Name of the Agreement
