--- a/sisgee-master/sisgee/src/main/resources/Messages_en_US.properties
+++ b/sisgee-master/sisgee/src/main/resources/Messages_en_US.properties
@@ -116,6 +116,7 @@ br.cefetrj.sisgee.resources.form.convenioAvencer = Conv\u00eanios \u00e0 vencer
 br.cefetrj.sisgee.resources.form.relatorioConsolidado = Consolidated Report
 br.cefetrj.sisgee.resources.form.portugues = Portuguese
 br.cefetrj.sisgee.resources.form.ingles = English
+br.cefetrj.sisgee.resources.form.rescisao = Close Term
 
 #index.jsp
 br.cefetrj.sisgee.resources.form.sisgee = SISGEE
