--- a/sisgee-master/sisgee/src/main/resources/Messages_pt_BR.properties
+++ b/sisgee-master/sisgee/src/main/resources/Messages_pt_BR.properties
@@ -164,6 +164,7 @@ br.cefetrj.sisgee.ver_termo_aditivo_servlet.id_termo_invalido = Termo aditivo es
 #form_termo_rescosao.jsp
 br.cefetrj.sisgee.resources.form_termo_rescisao.data_rescisao = Data de Rescis\u00e3o
 br.cefetrj.sisgee.resources.form_termo_rescisao.registro_termo = Registro de Termo de Rescis\u00e3o
+br.cefetrj.sisgee.resources.form.rescisao = Encerrar Termo
 
 #FormTermoRescisaoServlet
 br.cefetrj.sisgee.form_termo_rescisao_servlet.msg_termo_estagio_invalido = Nenhum termo de est\u00e1gio dispon\u00edvel para registrar rescis\u00e3o
