--- a/sisgee-master/sisgee/src/main/resources/Messages_en_US.properties
+++ b/sisgee-master/sisgee/src/main/resources/Messages_en_US.properties
@@ -112,7 +112,7 @@ br.cefetrj.sisgee.resources.form.convenio = Agreement
 br.cefetrj.sisgee.resources.form.cadastrarConvenio = Sign up new Agreement
 br.cefetrj.sisgee.resources.form.renovarConvenio = Renew Agreement
 br.cefetrj.sisgee.resources.form.relatorios = Reports
-br.cefetrj.sisgee.resources.form.convenioAvencer = Conv\u00eanios \u00e0 vencer
+br.cefetrj.sisgee.resources.form.convenioAvencer = Agreements to expire
 br.cefetrj.sisgee.resources.form.relatorioConsolidado = Consolidated Report
 br.cefetrj.sisgee.resources.form.portugues = Portuguese
 br.cefetrj.sisgee.resources.form.ingles = English
@@ -123,6 +123,7 @@ br.cefetrj.sisgee.resources.form.sisgee = SISGEE
 br.cefetrj.sisgee.resources.form.bemVindoSisgee = Welcome to SISGEE
 
 br.cefetrj.sisgee.valida_cadastro_empresa_servlet.msg_empresa_duplicada=Company already exists.
+br.cefetrj.sisgee.valida_cadastro_empresa_servlet.msg_pessoafisica_duplicada=Physical Person already has a agreement
 br.cefetrj.sisgee.valida_cadastro_empresa_servlet.msg_atencao=Some fields requires your attention.
 
 br.cefetrj.sisgee.form_empresa.msg_titulo=Agreement Registration 
@@ -135,7 +136,9 @@ br.cefetrj.sisgee.form_empresa.msg_salvar=Save
 br.cefetrj.sisgee.form_empresa.msg_cancelar=Cancel
 br.cefetrj.sisgee.incluir_cadastro_empresa_servlet.msg_ocorreu_erro=An unexpected error occurred while trying to register the company. Please try again or contact support if error persists
 br.cefetrj.sisgee.incluir_cadastro_empresa_servlet.msg_empresa_cadastrada=Company registered with success
+br.cefetrj.sisgee.incluir_cadastro_empresa_servlet.msg_convenio_cadastrado=Agreement registered with success
 br.cefetrj.sisgee.incluir_cadastro_empresa_servlet.msg_agente_cadastrado=Integrator agent registered with success
+br.cefetrj.sisgee.incluir_cadastro_empresa_servlet.msg_convenio_numero_gerado=Agreement number generated:
 
 #IncluirTermoAditivoServlet
 br.cefetrj.sisgee.incluir_termo_aditivo_servlet.msg_ocorreuErro = An unexpected error occurred while trying to register the additive term. Please try again or contact support if error persists
@@ -191,3 +194,35 @@ br.cefetrj.sisgee.relatorio.busca_relatorio_consolidado_servlet.nenhum_resultado
        br.cefetrj.sisgee.resources.form.razaoSocial = Company Name / Person Name
        br.cefetrj.sisgee.resources.form.placeholder_numeroConvenio = Enter the Number of the Agreement
        br.cefetrj.sisgee.resources.form.placeholder_nomeConvenio = Enter the Name of the Agreement
+
+
+br.cefetrj.sisgee.1= Services 
+br.cefetrj.sisgee.2= Agreement 
+br.cefetrj.sisgee.3= Make a agreement with CEFET/RJ
+br.cefetrj.sisgee.4= Term of Internship
+br.cefetrj.sisgee.5= Fill in a term to hire a trainee from CEFET / RJ!
+br.cefetrj.sisgee.6= Additions
+br.cefetrj.sisgee.7= Change Term of Internship data any time you want with Additives!
+br.cefetrj.sisgee.8= Reports
+br.cefetrj.sisgee.9= View the reports and terms statistics!
+br.cefetrj.sisgee.10= Validity
+br.cefetrj.sisgee.11= Agreement
+br.cefetrj.sisgee.12= Social Reason/Name
+br.cefetrj.sisgee.13= CNPJ/CPF
+br.cefetrj.sisgee.14= Email
+br.cefetrj.sisgee.15= Telephone
+br.cefetrj.sisgee.16= Contact Person
+br.cefetrj.sisgee.17= Return
+br.cefetrj.sisgee.18= Print
+br.cefetrj.sisgee.19= CNPJ/CPF
+br.cefetrj.sisgee.20= Internship Supervisor
+br.cefetrj.sisgee.21= Type
+br.cefetrj.sisgee.22= Status
+br.cefetrj.sisgee.23= Registration Date
+br.cefetrj.sisgee.24= Supervisor
+br.cefetrj.sisgee.25= Save
+br.cefetrj.sisgee.26= Cancel
+br.cefetrj.sisgee.27= Close
+br.cefetrj.sisgee.28 = There aren't any agreement to expire for the next 2 months!
+br.cefetrj.sisgee.29 = to
+br.cefetrj.sisgee.30 = Print
