--- a/sisgee-master/sisgee/src/main/resources/Messages_pt_BR.properties
+++ b/sisgee-master/sisgee/src/main/resources/Messages_pt_BR.properties
@@ -201,3 +201,35 @@ br.cefetrj.sisgee.relatorio.busca_relatorio_consolidado_servlet.nenhum_resultado
        br.cefetrj.sisgee.resources.form.valorAditivo = Valor da Bolsa no Aditivo
        br.cefetrj.sisgee.resources.form.placeholder_numeroConvenio = Digite o n\u00famero do Conv\u00eanio
        br.cefetrj.sisgee.resources.form.placeholder_nomeConvenio = Digite o nome do Conv\u00eanio
+
+
+br.cefetrj.sisgee.1= Servi\u00e7os 
+br.cefetrj.sisgee.2= Conv\u00eanio 
+br.cefetrj.sisgee.3= Fa\u00e7a um conv\u00eanio com o CEFET/RJ!
+br.cefetrj.sisgee.4= Termo de Est\u00e1gio
+br.cefetrj.sisgee.5= Preencha um termo para contratar um estagi\u00e1rio do CEFET/RJ!
+br.cefetrj.sisgee.6= Aditivos
+br.cefetrj.sisgee.7= Altere dados do Termo de Est\u00e1gio quando quiser com os Aditivos!
+br.cefetrj.sisgee.8= Relat\u00f3rios
+br.cefetrj.sisgee.9= Veja os relat\u00f3rios e estat\u00edsticas de termos!
+br.cefetrj.sisgee.10= Vig\u00eancia
+br.cefetrj.sisgee.11= Conv\u00eanio
+br.cefetrj.sisgee.12= Raz\u00e3o Social/Nome
+br.cefetrj.sisgee.13= CNPJ/CPF
+br.cefetrj.sisgee.14= Email
+br.cefetrj.sisgee.15= Telefone
+br.cefetrj.sisgee.16= Pessoa de contato
+br.cefetrj.sisgee.17= Voltar
+br.cefetrj.sisgee.18= Imprimir
+br.cefetrj.sisgee.19= CNPJ/CPF
+br.cefetrj.sisgee.20= Supervisor do Est\u00e1gio
+br.cefetrj.sisgee.21= Tipo
+br.cefetrj.sisgee.22= Status
+br.cefetrj.sisgee.23= Data de Cadastramento
+br.cefetrj.sisgee.24= Supervisor
+br.cefetrj.sisgee.25= Salvar
+br.cefetrj.sisgee.26= Cancelar
+br.cefetrj.sisgee.27= Fechar
+br.cefetrj.sisgee.28 = N\u00e3o h\u00e1 conv\u00eanios a vencer para os pr\u00f3ximos 2 meses!
+br.cefetrj.sisgee.29 = a
+br.cefetrj.sisgee.30 = Imprimir
