Validações de Termo Estágio
Validações do Claudio referente ao termo estagio, aditivo.

--- a/sisgee-master/sisgee/src/main/resources/Messages_en_US.properties
+++ b/sisgee-master/sisgee/src/main/resources/Messages_en_US.properties
@@ -19,6 +19,7 @@ br.cefetrj.sisgee.valida_utils.msg_valida_booleano=This field must be boolean
 br.cefetrj.sisgee.valida_utils.msg_valida_date=This date is invalid
 br.cefetrj.sisgee.valida_utils.msg_valida_datas=Final date couldn't be older than start date
 br.cefetrj.sisgee.valida_utils.msg_valida_UF=Invalid State.
+br.cefetrj.sisgee.valida_utils.msg_valida_tamanho_num_valor = The value of the Stage Bag should be less than R$2000,00
 
 br.cefetrj.sisgee.form_termo_estagio_servlet.msg_atencao=Some fields requires your attention
 br.cefetrj.sisgee.form_termo_estagio_servlet.valor_invalido=Invalid value
@@ -194,7 +195,12 @@ br.cefetrj.sisgee.relatorio.busca_relatorio_consolidado_servlet.nenhum_resultado
        br.cefetrj.sisgee.resources.form.razaoSocial = Company Name / Person Name
        br.cefetrj.sisgee.resources.form.placeholder_numeroConvenio = Enter the Number of the Agreement
        br.cefetrj.sisgee.resources.form.placeholder_nomeConvenio = Enter the Name of the Agreement
-
+       br.cefetrj.sisgee.resources.form.aluno_nao_encontrado1 = Student not found
+       br.cefetrj.sisgee.resources.form.aluno_nao_encontrado2 = The Registration does not correspond to a registered Student.
+       br.cefetrj.sisgee.resources.form.matricula_aluno_tam = Student Tuition Less Than 10 Characters
+       br.cefetrj.sisgee.resources.form.msg_aluno_has_termo_aberto2 = Open Term Found
+       br.cefetrj.sisgee.resources.form.convenio_nao_encontrado1 = Agreement not found
+       br.cefetrj.sisgee.resources.form.convenio_nao_encontrado2 = The Agreement does not correspond to a registered Agreement.
 
 br.cefetrj.sisgee.1= Services 
 br.cefetrj.sisgee.2= Agreement 
