Ajustes de Termo Rescisão
Claudio e Vinicius

Ajustes no Termo Rescisão com modificações do Termo Aditivo feitas por Vinicius e unidas neste envio

--- a/sisgee-master/sisgee/src/main/resources/Messages_en_US.properties
+++ b/sisgee-master/sisgee/src/main/resources/Messages_en_US.properties
@@ -201,6 +201,7 @@ br.cefetrj.sisgee.relatorio.busca_relatorio_consolidado_servlet.nenhum_resultado
        br.cefetrj.sisgee.resources.form.msg_aluno_has_termo_aberto2 = Open Term Found
        br.cefetrj.sisgee.resources.form.convenio_nao_encontrado1 = Agreement not found
        br.cefetrj.sisgee.resources.form.convenio_nao_encontrado2 = The Agreement does not correspond to a registered Agreement.
+       br.cefetrj.sisgee.valida_utils.msg_valida_datas_rescisao = Termination Date must not be greater than End Date
 
 br.cefetrj.sisgee.1= Services 
 br.cefetrj.sisgee.2= Agreement 
