--- a/sisgee-master/sisgee/src/main/resources/Messages_pt_BR.properties
+++ b/sisgee-master/sisgee/src/main/resources/Messages_pt_BR.properties
@@ -168,7 +168,7 @@ br.cefetrj.sisgee.resources.form_termo_rescisao.registro_termo = Registro de Ter
 br.cefetrj.sisgee.resources.form.rescisao = Encerrar Termo
 
 #FormTermoRescisaoServlet
-br.cefetrj.sisgee.form_termo_rescisao_servlet.msg_termo_estagio_invalido = Nenhum termo de est\u00e1gio dispon\u00edvel para registrar rescis\u00e3o
+br.cefetrj.sisgee.form_termo_rescisao_servlet.msg_termo_estagio_invalido = Nenhum Termo de Est\u00e1gio Ativo dispon\u00edvel para registrar Rescis\u00e3o
 
 #Keys de Relatorio
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.title=Relat\u00f3rio Consolidado
@@ -208,6 +208,7 @@ br.cefetrj.sisgee.relatorio.busca_relatorio_consolidado_servlet.nenhum_resultado
        br.cefetrj.sisgee.resources.form.msg_aluno_has_termo_aberto2 = Termo Aberto Encontrado
        br.cefetrj.sisgee.resources.form.convenio_nao_encontrado1 = Conv\u00eanio n\u00e3o encontrado
        br.cefetrj.sisgee.resources.form.convenio_nao_encontrado2 = O Conv\u00eanio n\u00e3o corresponde a um Conv\u00eanio cadastrado.
+       br.cefetrj.sisgee.valida_utils.msg_valida_datas_rescisao = Data de Rescis\u00e3o n\u00e3o deve ser maior que Data Fim do Termo
 
 br.cefetrj.sisgee.1= Servi\u00e7os 
 br.cefetrj.sisgee.2= Conv\u00eanio 
