Validacoes Relatorios - Matheus
Validacoes de Convenios a Vencer e Relatorio,  - Matheus

Ajustes validacoes Convenio - Lucas

--- a/sisgee-master/sisgee/src/main/resources/Messages_pt_BR.properties
+++ b/sisgee-master/sisgee/src/main/resources/Messages_pt_BR.properties
@@ -175,11 +175,13 @@ br.cefetrj.sisgee.relatorio.relatorio_consolidado.title=Relat\u00f3rio Consolida
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.lgd_criterio_pesquisa=Crit\u00e9rio de Pesquisa
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.lbl_data_inicio=Data de In\u00edcio
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.lbl_data_termino=Data de Termino
+br.cefetrj.sisgee.relatorio.relatorio_consolidado_servlet.alert_data_inicio = Insira uma data de in\u00edcio
+br.cefetrj.sisgee.relatorio.relatorio_consolidado_servlet.alert_data_termino = Insira uma data de t\u00e9rmino
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.lbl_estagio_obrg=Est\u00e1gio Obrigat\u00f3rio
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.lbl_estagio_nao_obrg=Est\u00e1gio N\u00e3o Obrigat\u00f3rio
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.btn_pesquisar=Pesquisar
 br.cefetrj.sisgee.relatorio.relatorio_consolidado_servlet.msg_check_estagio_not_null=Selecione pelo menos uma op\u00e7\u00e3o
-br.cefetrj.sisgee.relatorio.relatorio_consolidado_servlet.msg_data_obrigatoria=Selecione ambos os campos
+br.cefetrj.sisgee.relatorio.relatorio_consolidado_servlet.msg_data_obrigatoria=Voc\u00ea precisa preencher as duas datas
 br.cefetrj.sisgee.relatorio.relatorio_consolidado_servlet.msg_valida_datas=A data inicial deve anteceder a data final
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.tabela_resultado.qnt_termoestagio=Termos de Est\u00e1gio Registrados
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.tabela_resultado.qnt_termoaditivo=Aditivos Registrados
