--- a/sisgee-master/sisgee/src/main/resources/Messages_en_US.properties
+++ b/sisgee-master/sisgee/src/main/resources/Messages_en_US.properties
@@ -171,11 +171,13 @@ br.cefetrj.sisgee.relatorio.relatorio_consolidado.title=Consolidated Report
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.lgd_criterio_pesquisa=Search Filter
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.lbl_data_inicio=Initial Date
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.lbl_data_termino=Final Date
+br.cefetrj.sisgee.relatorio.relatorio_consolidado_servlet.alert_data_inicio = Insert a initial date
+br.cefetrj.sisgee.relatorio.relatorio_consolidado_servlet.alert_data_termino = Insert a final date
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.lbl_estagio_obrg=Internship Needed
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.lbl_estagio_nao_obrg=Internship Non Needed
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.btn_pesquisar=Search
 br.cefetrj.sisgee.relatorio.relatorio_consolidado_servlet.msg_check_estagio_not_null=Select at least one option
-br.cefetrj.sisgee.relatorio.relatorio_consolidado_servlet.msg_data_obrigatoria=Select both date fields
+br.cefetrj.sisgee.relatorio.relatorio_consolidado_servlet.msg_data_obrigatoria=You must fill in both dates
 br.cefetrj.sisgee.relatorio.relatorio_consolidado_servlet.msg_valida_datas=The initial date must be previous than final date.
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.tabela_resultado.qnt_termoestagio=Internship Terms Registered
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.tabela_resultado.qnt_termoaditivo=Additions Registered
