Ajustes Valida Date

--- a/sisgee-master/sisgee/src/main/resources/Messages_en_US.properties
+++ b/sisgee-master/sisgee/src/main/resources/Messages_en_US.properties
@@ -171,8 +171,8 @@ br.cefetrj.sisgee.relatorio.relatorio_consolidado.title=Consolidated Report
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.lgd_criterio_pesquisa=Search Filter
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.lbl_data_inicio=Initial Date
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.lbl_data_termino=Final Date
-br.cefetrj.sisgee.relatorio.relatorio_consolidado_servlet.alert_data_inicio = Insert a initial date
-br.cefetrj.sisgee.relatorio.relatorio_consolidado_servlet.alert_data_termino = Insert a final date
+br.cefetrj.sisgee.relatorio.relatorio_consolidado_servlet.alert_data_inicio = Insert a valid initial date
+br.cefetrj.sisgee.relatorio.relatorio_consolidado_servlet.alert_data_termino = Insert a valid final date
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.lbl_estagio_obrg=Internship Needed
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.lbl_estagio_nao_obrg=Internship Non Needed
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.btn_pesquisar=Search
