--- a/sisgee-master/sisgee/src/main/resources/Messages_pt_BR.properties
+++ b/sisgee-master/sisgee/src/main/resources/Messages_pt_BR.properties
@@ -175,8 +175,8 @@ br.cefetrj.sisgee.relatorio.relatorio_consolidado.title=Relat\u00f3rio Consolida
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.lgd_criterio_pesquisa=Crit\u00e9rio de Pesquisa
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.lbl_data_inicio=Data de In\u00edcio
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.lbl_data_termino=Data de Termino
-br.cefetrj.sisgee.relatorio.relatorio_consolidado_servlet.alert_data_inicio = Insira uma data de in\u00edcio
-br.cefetrj.sisgee.relatorio.relatorio_consolidado_servlet.alert_data_termino = Insira uma data de t\u00e9rmino
+br.cefetrj.sisgee.relatorio.relatorio_consolidado_servlet.alert_data_inicio = Insira uma data de in\u00edcio v\u00e1lida
+br.cefetrj.sisgee.relatorio.relatorio_consolidado_servlet.alert_data_termino = Insira uma data de t\u00e9rmino v\u00e1lida
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.lbl_estagio_obrg=Est\u00e1gio Obrigat\u00f3rio
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.lbl_estagio_nao_obrg=Est\u00e1gio N\u00e3o Obrigat\u00f3rio
 br.cefetrj.sisgee.relatorio.relatorio_consolidado.btn_pesquisar=Pesquisar
